test/classes/nilability/if-var-2-type.chpl
// Error: condition on a type

if const LT = Locales.type then  // error
  writeln("it is not nil!");
